# thot

./: .bazelrc  .gitignore  Cargo.toml  README.md  samples.http  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
web/actix/: Cargo.toml
web/actix-wrapper/: BUILD.bazel  Cargo.toml
web/actix-wrapper/src/: main.rs
